main.tf
provider "aws" {
  region  = "us-east-1"
  access_key = "AKIA5GJCV74A3C5YSSOE"
  secret_key = "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"
}

# 1. create vpcc

resource "aws_vpc" "prod-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "production"
  }
}
 
# 2. create internet gateway

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id

}

# 3. create route table

resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id = aws_internet_gateway.gw.id
  }


  tags = {
    Name = "prod"
  }
}

# 4. create a subnet


resource "aws_subnet" "subnet-1" {
  vpc_id     = aws_vpc.prod-vpc.id
  cidr_block = "10.0.1.0/24"
 availability_zone = "us-east-1a"

  tags = {
    Name = "prod_sub"
  }
}

# 5. associate subnet with route table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-route-table.id
}

# 6. create security group to allow port 22,80,443
resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow web inbound traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  
    ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  
    ingress {
    description      = "SSH"
    from_port        = 2
    to_port          = 2
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

# 7. create network interface with an ip in the subnet that was created in step 4
resource "aws_network_interface" "web-server-jkk" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]
}
# 8. Assign an elastic IP to the network interface created vin step  7

resource "aws_eip" "one" {
  vpc                    = true
  network_interface         = aws_network_interface.web-server-jkk.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [aws_internet_gateway.gw]
}

# 9. create Ubuntu server and install /enable apache2
resource "aws_instance" "web-server-instance" {
  ami           = "ami-0fc5d935ebf8bc3bc"
  instance_type = "t2.micro"
  availability_zone = "us-east-1a"
  key_name = "main-key"
  

 

  user_data = <<-EOF
              #1/bin/bash
              sudo apt update
              sudo apt install apache2 -y
              sudo systemctl start apache2 
              sudo bash -c "echo your very first web server > /var/www/html/index.html"
              EOF
   tags = {
     Name = "web-server"
   }

}









/*
resource "aws_subnet" "subnet1" {
  vpc_id     = aws_vpc.my_first_vpc.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "prod_sub"
  }
}

resource "aws_vpc" "my_first_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "prod_vpc"
  }
}
resource "aws_vpc" "my_second_vpc" {
  cidr_block = "10.1.0.0/16"
  tags = {
    Name = "dev_vpc"
  }
}

resource "aws_subnet" "subnet2" {
  vpc_id     = aws_vpc.my_second_vpc.id
  cidr_block = "10.1.1.0/24"

  tags = {
    Name = "dev_sub"
  }
}
*/

/*
resource "aws_instance" "my-Ec2" {
  ami           = "ami-0fc5d935ebf8bc3bc"
  instance_type = "t2.micro"
  
}
*/
#resource "<provider>_<resource_type>" "name" {
  #  config options-----
   # key = "value"
    #key = "another value"
#}
